tests/should_fail/bug/603.stderr
error[E0277]: the trait bound `S: creusot_contracts::Iterator` is not satisfied
 --> 603.rs:7:5
  |
7 |     fn next(&mut self) -> Option<()> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `creusot_contracts::Iterator` is not implemented for `S`
  |
  = help: the following other types implement trait `creusot_contracts::Iterator`:
            &mut I
            creusot_contracts::std::iter::MapInv<I, <I as std::iter::Iterator>::Item, F>
            std::array::IntoIter<T, N>
            std::collections::hash_map::IntoIter<K, V>
            std::collections::hash_map::Iter<'a, K, V>
            std::collections::hash_map::IterMut<'a, K, V>
            std::collections::hash_set::Difference<'a, T, S>
            std::collections::hash_set::Intersection<'a, T, S>
          and 25 others

error: error above

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
